syntax = "proto3";

package pb;

message Npc {
	int64 id = 1;
	string name = 2;
	string lastname = 3;
	int64 level = 4;
	int64 race = 5;
	int64 class = 6; 
	int64 bodytype = 7;
	int64 hp = 8;
	int64 mana = 9;
	int64 gender = 10;
	int64 texture = 11;
	int64 helmtexture = 12;
	int64 herosforgemodel = 13;
	float size = 14;
	int64 hpregenrate = 15;
	int64 manaregenrate = 16;
	int64 loottableid = 17;
	int64 merchantid = 18;
	int64 altcurrencyid = 19;
	int64 npcspellsid = 20;
	int64 npcspellseffectsid = 21;
	int64 npcfactionid = 22;
	int64 adventuretemplateid = 23;
	int64 traptemplate = 24;
	int64 mindmg = 25;
	int64 maxdmg = 26;
	int64 attackcount = 27;
	string Npcspecialattks = 28;
	string Specialabilities = 29;
	int64 aggroradius = 30;
	int64 assistradius = 31;
	int64 face = 32;
	int64 luclinhairstyle = 33;
	int64 luclinhaircolor = 34;
	int64 luclineyecolor = 35;
	int64 luclineyecolor2 = 36;
	int64 luclinbeardcolor = 37;
	int64 luclinbeard = 38;
	int64 drakkinheritage = 39;
	int64 drakkintattoo = 40;
	int64 drakkindetails = 41;
	int64 armortintid = 42;
	int64 armortintred = 43;
	int64 armortintgreen = 44;
	int64 armortintblue = 45;
	int64 dmeleetexture1 = 46;
	int64 dmeleetexture2 = 47;
	string ammoidfile = 48;
	int64 primmeleetype = 49;
	int64 secmeleetype = 50;
	int64 rangedtype = 51;
	float runspeed = 52;
	int64 mr = 53;
	int64 cr = 54;
	int64 dr = 55;
	int64 fr = 56;
	int64 pr = 57;
	int64 corrup = 58;
	int64 phr = 59;
	int64 seeinvis = 60;
	int64 seeinvisundead = 61;
	int64 qglobal = 62;
	int64 ac = 63;
	int64 npcaggro = 64;
	int64 spawnlimit = 65;
	float attackspeed = 66;
	int64 attackdelay = 67;
	int64 findable = 68;
	int64 str = 69;
	int64 sta = 70;
	int64 dex = 71;
	int64 agi = 72;
	int64 int = 73;
	int64 wis = 74;
	int64 cha = 75;
	int64 seehide = 76;
	int64 seeimprovedhide = 77;
	int64 trackable = 78;
	int64 isbot = 79;
	int64 exclude = 80;
	int64 atk = 81;
	int64 accuracy = 82;
	int64 avoidance = 83;
	int64 slowmitigation = 84;
	int64 version = 85;
	int64 maxlevel = 86;
	int64 scalerate = 87;
	int64 privatecorpse = 88;
	int64 uniquespawnbyname = 89;
	int64 underwater = 90;
	int64 isquest = 91;
	int64 emoteid = 92;
	float spellscale = 93;
	float healscale = 94;
	int64 notargethotkey = 95;
	int64 raidtarget = 96;
	int64 armtexture = 97;
	int64 bracertexture = 98;
	int64 handtexture = 99;
	int64 legtexture = 100;
	int64 feettexture = 101;
	int64 light = 102;
	int64 walkspeed = 103;
	int64 peqid = 104;
	int64 unique = 105;
	int64 fixed = 106;
	int64 ignoredespawn = 107;
	int64 showname = 108;
	int64 untargetable = 109;
	int64 charmac = 110;
	int64 charmmindmg = 111;
	int64 charmmaxdmg = 112;
	int64 charmattackdelay = 113;
	int64 charmaccuracyrating = 114;
	int64 charmavoidancerating = 115;
	int64 charmatk = 116;
	int64 skipgloballoot = 117;
	int64 rarespawn = 118;
	int64 stuckbehavior = 119;

	string cleanname = 122;
	int64 model = 123;
	int64 flymode = 124;
}
